[package]
name = "banyan"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "^0.3.7"
clap = { version = "^3.1.6", features = ["derive"] }
crossbeam-channel = "^0.5"
crossbeam-utils = "^0.8"
libc = "^0.2.97"
serde = { version = "^1.0", features = ["derive"] }
base64 = "^0.13.0"
bincode = "^1.3"
dhat = "^0.3"
parking_lot = "^0.12"

[profile.release]
debug = true
lto = true

[features]
dhat-heap = []    # if you are doing heap profiling
